fixed slanted view on iPhone

--- a/source/sass/_mainNav.scss
+++ b/source/sass/_mainNav.scss
@@ -45,22 +45,12 @@ header{
 	width: 50px;
 	height: 50px;
 	position: absolute;
-	bottom: 37px;
+	bottom: 2.313em;
 	transform: translateX(-50%);
 	cursor: pointer;
 }
 
-a[ id= "arrow" ]:target ~ #informace div.information {
-	-webkit-transform: translateY( -500px);
-	transform: translateY( -500px );
-}
 
-/*Mobile view of skweded header*/
-@media only screen and (max-width: 540px) {
-	.slanted::before {
-		clip-path: polygon(100% 70%, 0% 100%, 100% 100%);
-	}
-}
 
 section{
 	height: auto;
@@ -77,7 +67,7 @@ nav {
 	position: fixed;
 	width: 100%;
 	line-height: 60px;
-	z-index: 99;
+	z-index: 999;
 	ul {
 		line-height: 60px;
 		list-style: none;
@@ -186,6 +176,10 @@ nav.black ul {
 		display: block;
 		padding: 10px 24px 0px;
 	}
+
+	.slanted .description img{
+		bottom: 2em;
+	}
 }
 @media only screen 
 and (max-width: 786px) 
@@ -194,6 +188,7 @@ and (orientation: landscape){
 		line-height: 50px;
 	}
 }
+
 @media only screen 
 and (max-width: 568px) 
 and (orientation: landscape){
@@ -202,5 +197,18 @@ and (orientation: landscape){
 	}
 	.menu-icon {
 		height: 70px;
+	}
+}
+
+/*Mobile view of skweded header*/
+@media only screen and (max-width: 540px) {
+	.slanted::before {
+		// clip-path: polygon(100% 70%, 0% 100%, 100% 100%);
+		clip-path: none;
+		transform: skewY(-7deg);
+		bottom: -168px;
+	}
+	.slanted .description img{
+		bottom: 6px;
 	}
 }
