--- a/source/sass/_prihlaska.scss
+++ b/source/sass/_prihlaska.scss
@@ -16,11 +16,11 @@
     background-color: #fff;
     color: #495057;
     border-radius: 7px;
-    padding: 1em 0 3.75em 0;
+    padding: 1em 3em 3.75em 3em;
     position: relative;
     
     p {
-        width: 60%;
+        width: 80%;
         margin: 0 auto;
         // margin-left: 88px;
         font-size: 10px;
@@ -48,17 +48,18 @@ form {
 }
 
 input {
-    width: 60%;
+    width: 80%;
     display: block;
     margin: 1em auto;
     padding: 0.6em;
     border: 1px solid #ced4da;
     border-radius: .25rem;
+    font-size: 1rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .checkbox {
-    width: 60%;
+    width: 80%;
     margin: 10px auto;
     // margin-top: 10px;
     // margin-left: 88px;
@@ -116,13 +117,13 @@ button, input {
   and (max-device-width: 400px){
     .modal-content {
         input[type=text], input[type=email] {
-            width: 70%;
+            width: 90%;
         }
         p {
-            width: 70%;
+            width: 90%;
         }
         .checkbox {
-            width: 70%;
+            width: 90%;
         }
     }
 }
@@ -133,11 +134,15 @@ button, input {
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
       .modal-content {
-          width: 95%;
+          width: 80%;
           height: 65%;
+          height: calc(var(--vh, 1vh) * 65);
           h2 {
               margin-top: 20px;
           }
+        //   input[type=text], input[type=email] {
+        //     width: 100%;
+        //   }
       }
 }
 
@@ -148,7 +153,7 @@ button, input {
   and (orientation: landscape) { 
       .modal-content {
           width: 85%;
-          height: 90vh;
+          height: 90%;
           button {
               margin-top: 5px;
           }
