--- a/source/sass/_zadani.scss
+++ b/source/sass/_zadani.scss
@@ -53,6 +53,8 @@
     left: 0;
     bottom: 20vh;
     right: 0;
+    margin-bottom: -1px;
+    margin-left: -10px;
 }
 
 .slider {
